# alpine-rust

./: .drone.yml  .gitattributes  .gitignore  Cargo.toml  alpine@msrd0.de-5fc3c0b2.rsa.pub  askama.toml  build.rs  config.toml  download_patches.sh  index.html  python3.patch  versions.toml
3.12/alpine-rust/x86_64/: cargo-1.40-1.40.0-r1.apk  cargo-1.40-bash-completions-1.40.0-r1.apk  cargo-1.40-doc-1.40.0-r1.apk  cargo-1.40-zsh-completion-1.40.0-r1.apk  cargo-1.45-1.45.2-r1.apk  cargo-1.45-bash-completions-1.45.2-r1.apk  cargo-1.45-doc-1.45.2-r1.apk  cargo-1.45-zsh-completion-1.45.2-r1.apk  cargo-1.46-1.46.0-r1.apk  cargo-1.46-bash-completions-1.46.0-r1.apk  cargo-1.46-doc-1.46.0-r1.apk  cargo-1.46-zsh-completion-1.46.0-r1.apk  clippy-1.40-1.40.0-r1.apk  clippy-1.45-1.45.2-r1.apk  clippy-1.46-1.46.0-r1.apk  rust-1.40-1.40.0-r1.apk  rust-1.40-analysis-1.40.0-r1.apk  rust-1.40-dbg-1.40.0-r1.apk  rust-1.40-doc-1.40.0-r1.apk  rust-1.40-gdb-1.40.0-r1.apk  rust-1.40-lldb-1.40.0-r1.apk  rust-1.40-src-1.40.0-r1.apk  rust-1.40-stdlib-1.40.0-r1.apk  rust-1.45-1.45.2-r1.apk  rust-1.45-analysis-1.45.2-r1.apk  rust-1.45-dbg-1.45.2-r1.apk  rust-1.45-doc-1.45.2-r1.apk  rust-1.45-gdb-1.45.2-r1.apk  rust-1.45-lldb-1.45.2-r1.apk  rust-1.45-src-1.45.2-r1.apk  rust-1.45-stdlib-1.45.2-r1.apk  rust-1.46-1.46.0-r1.apk  rust-1.46-analysis-1.46.0-r1.apk  rust-1.46-dbg-1.46.0-r1.apk  rust-1.46-doc-1.46.0-r1.apk  rust-1.46-gdb-1.46.0-r1.apk  rust-1.46-lldb-1.46.0-r1.apk  rust-1.46-src-1.46.0-r1.apk  rust-1.46-stdlib-1.46.0-r1.apk  rustfmt-1.40-1.40.0-r1.apk  (+2 more)
patches/: download_patches.sh
patches-1.43/: 0020-no-Zconfig-profile-option.patch  0021-rename-Zmacro-backtrace-option.patch
patches-1.44/: static-pie.patch
patches-1.48/: 0007-do-not-install-libunwind-source.patch  musl-dont-use-crt-static.patch  need-ssp_nonshared.patch
patches-1.49/: alpine-target.patch  musl-add-s390x-target.patch  musl-fix-linux_musl_base.patch
patches-1.50/: 0006-Prefer-libgcc_eh-over-libunwind-for-musl.patch  link-musl-dynamically.patch  musl-dont-use-crt-static.patch  need-rpath.patch  need-ssp_nonshared.patch
patches-1.51/: musl-add-s390x-target.patch
simple-compiler-test/: Cargo.toml
simple-compiler-test/macros/: Cargo.toml
simple-compiler-test/macros/src/: lib.rs
simple-compiler-test/src/: lib.rs
src/: config.rs  docker.rs  ec2.rs  main.rs  metadata.rs  package.rs  repo.rs  templates.rs  upcloud.rs
src/docker/: caddy.rs  cidr_v6.rs  keys.rs  mod.rs
src/server/: docker_keys.rs  local.rs  mod.rs  upcloud.rs
src/server/upcloud/: api.rs  mod.rs  ssh.rs
templates/: APKBUILD.tpl  Dockerfile-abuild.tpl  Dockerfile-default.tpl  Dockerfile-minimal.tpl  Dockerfile.tpl  default.Dockerfile  index.html  launch.sh  minimal.Dockerfile
templates/caddy/: Caddyfile  Dockerfile
templates/rust/: APKBUILD  abuild.Dockerfile  default.Dockerfile  minimal.Dockerfile  test.Dockerfile
