# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "alpine-rust"
version = "0.1.0"
authors = ["Dominic <git@msrd0.de>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
askama = "0.10"
base64 = "0.13"
bollard = { version = "0.9", features = ["ssl"] }
futures-util = "0.3.8"
lazy_static = "1.4"
log = "0.4"
num_cpus = "1.13"
openssl = "0.10.30"
pretty_env_logger = "0.4"
rand = "0.7"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssh2 = "0.9"
tar = "0.4"
tempfile = "3.1"
toml = "0.5"
tokio = { version = "0.2", features = ["fs", "macros", "rt-threaded", "stream", "time"] }
