# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "alpine-rust"
version = "0.0.0"
authors = ["Dominic <git@msrd0.de>"]
edition = "2018"
license = "GPL-3.0"

# do not publish to crates.io
publish = false

[dependencies]
# utility crates
anyhow = "1.0"
base64 = "0.13"
indoc = "1.0"
lazy_static = "1.4"
num_cpus = "1.13"
rand = "0.7"
tempfile = "3.1"

# async stuff
futures-util = "0.3.8"
tokio = { version = "0.2", features = ["fs", "macros", "rt-threaded", "stream", "time"] }

# user interaction
log = "0.4"
pretty_env_logger = "0.4"
structopt = "0.3"

# templating
askama = "0.10"

# communication with docker/upcloud
bollard = { version = "0.9", features = ["ssl"] }
openssl = "0.10.30"
reqwest = { version = "0.10", features = ["gzip", "json", "rustls-tls"], default-features = false }
ssh2 = "0.9"
tar = "0.4"

# communication with the repository
rust-s3 = { version = "0.26", features = ["rustls-tls"], default-features = false }

# dataformat
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
