# -*- eval: (cargo-minor-mode 1) -*-

[package]
name = "alpine-rust"
version = "0.0.0"
authors = ["Dominic <git@msrd0.de>"]
edition = "2018"
license = "GPL-3.0"

# do not publish to crates.io
publish = false

[build-dependencies]
tar = "0.4"

[dependencies]
# utility crates
anyhow = "1.0"
base64 = "0.13"
chrono = { version = "0.4", features = ["serde"] }
dirs-next = "2.0"
either = "1.6"
flate2 = "1.0"
itertools = "0.10"
lazy_static = "1.4"
num_cpus = "1.13"
rand = "0.8"
regex = "1.4"
semver = "0.11"
tempfile = "3.1"

# async stuff
async-trait = "0.1"
futures-util = "0.3.8"
tokio = { version = "0.2", features = ["fs", "macros", "rt-threaded", "stream", "time"] }

# user interaction
log = "0.4"
pretty_env_logger = "0.4"
structopt = "0.3"

# templating
askama = "0.10"

# communication with docker/upcloud
bollard = { version = "0.9", features = ["ssl"] }
openssl = "0.10.30"
reqwest = { version = "0.10", features = ["gzip", "json", "rustls-tls"], default-features = false }
ssh2 = "0.9"
tar = "0.4"

# communication with the repository
md5 = "0.7"
rust-s3 = { version = "0.27.0-beta8", features = ["with-tokio", "tokio-rustls-tls"], default-features = false }

# config file
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.9"
toml = "0.5"
toml_edit = "0.2"

# force http to version 0.2.2 until update to tokio/bytes 1.0
http = "=0.2.2"

# flate2/miniz is too slow on debug builds
[profile.dev.package.flate2]
opt-level = 2
[profile.dev.package.miniz_oxide]
opt-level = 2
